syntax = "proto3";

option java_package = "com.example.data";
option java_multiple_files = true;

message UserProtoData{
  string accessToken = 1;
  string refreshToken = 2;
}